Make use of ImmutableMap and ImmutableList everywhere
For consistency with the rest of the codebase.